scillaParser.js
// Generated from scilla.g4 by ANTLR 4.9
// jshint ignore: start
import antlr4 from 'antlr4';
import scillaListener from './scillaListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class scillaParser extends antlr4.Parser {

    static grammarFileName = "scilla.g4";
    static literalNames = [ null, "'-'", "'forall'", "'builtin'", "'library'", 
                            "'import'", "'let'", "'in'", "'match'", "'with'", 
                            "'end'", "'fun'", "'tfun'", "'contract'", "'transition'", 
                            "'send'", "'event'", "'field'", "'accept'", 
                            "'exists'", "'delete'", "'Emp'", "'Map'", "'scilla_version'", 
                            "'type'", "'of'", "'try'", "'catch'", "'as'", 
                            "'procedure'", "'throw'", "';'", "':'", "'.'", 
                            "'|'", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                            "','", "'=>'", "'->'", "'='", "'&'", "'<-'", 
                            "':='", "'@'", "'_'", null, null, null, null, 
                            null, null, "'Event'" ];
    static symbolicNames = [ null, null, "FORALL", "BUILTIN", "LIBRARY", 
                             "IMPORT", "LET", "IN", "MATCH", "WITH", "END", 
                             "FUN", "TFUN", "CONTRACT", "TRANSITION", "SEND", 
                             "EVENT", "FIELD", "ACCEPT", "EXISTS", "DELETE", 
                             "EMP", "MAP", "SCILLA_VERSION", "TYPE", "OF", 
                             "TRY", "CATCH", "AS", "PROCEDURE", "THROW", 
                             "SEMICOLON", "COLON", "PERIOD", "BAR", "LSQB", 
                             "RSQB", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                             "COMMA", "ARROW", "TARROW", "EQ", "AND", "FETCH", 
                             "ASSIGN", "AT", "UNDERSCORE", "BlockComment", 
                             "NUMBER", "STRING", "FLOAT", "HEX", "BYSTR", 
                             "EVENT_TY", "WS", "TOSKIP", "ID", "SPID", "CID", 
                             "TID" ];
    static ruleNames = [ "int_", "t_map_key", "t_map_value_args", "t_map_value", 
                         "t_map_value_allow_targs", "address_typ", "typ", 
                         "targ", "address_type_field", "exp", "simple_exp", 
                         "atomic_exp", "lit", "ctargs", "map_access", "pattern", 
                         "arg_pattern", "exp_pm_clause", "msg_entry", "builtin_args", 
                         "exp_term", "type_term", "identifier", "sid", "scid", 
                         "cid", "type_annot", "id_with_typ", "stmt", "remote_fetch_stmt", 
                         "stmt_pm_clause", "stmts", "stmts_term", "param_pair", 
                         "component", "procedure", "transition", "component_id", 
                         "component_params", "component_body", "field", 
                         "with_constraint", "contract", "tconstr", "libentry", 
                         "library", "lmodule", "importname", "imports", 
                         "cmodule" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = scillaParser.ruleNames;
        this.literalNames = scillaParser.literalNames;
        this.symbolicNames = scillaParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 6:
    	    		return this.typ_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    typ_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	int_() {
	    let localctx = new Int_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, scillaParser.RULE_int_);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===scillaParser.T__0) {
	            this.state = 100;
	            this.match(scillaParser.T__0);
	        }

	        this.state = 103;
	        this.match(scillaParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	t_map_key() {
	    let localctx = new T_map_keyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, scillaParser.RULE_t_map_key);
	    try {
	        this.state = 115;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 105;
	            localctx.kt_to_map = this.scid();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 106;
	            this.match(scillaParser.LPAREN);
	            this.state = 107;
	            localctx.kt_to_map = this.scid();
	            this.state = 108;
	            this.match(scillaParser.RPAREN);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 110;
	            this.match(scillaParser.LPAREN);
	            this.state = 111;
	            localctx.kt = this.address_typ();
	            this.state = 112;
	            this.match(scillaParser.RPAREN);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 114;
	            localctx.kt = this.address_typ();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	t_map_value_args() {
	    let localctx = new T_map_value_argsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, scillaParser.RULE_t_map_value_args);
	    try {
	        this.state = 126;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case scillaParser.LPAREN:
	            localctx = new TMP3Context(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 117;
	            this.match(scillaParser.LPAREN);
	            this.state = 118;
	            localctx.t = this.t_map_value_allow_targs();
	            this.state = 119;
	            this.match(scillaParser.RPAREN);
	            break;
	        case scillaParser.HEX:
	        case scillaParser.BYSTR:
	        case scillaParser.CID:
	            localctx = new TMP4Context(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 121;
	            localctx.d = this.scid();
	            break;
	        case scillaParser.MAP:
	            localctx = new TMP5Context(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 122;
	            this.match(scillaParser.MAP);
	            this.state = 123;
	            localctx.k = this.t_map_key();
	            this.state = 124;
	            localctx.v = this.t_map_value();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	t_map_value() {
	    let localctx = new T_map_valueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, scillaParser.RULE_t_map_value);
	    try {
	        this.state = 138;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new TMPScidContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 128;
	            localctx.d = this.scid();
	            break;

	        case 2:
	            localctx = new TMPMapContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 129;
	            this.match(scillaParser.MAP);
	            this.state = 130;
	            localctx.k = this.t_map_key();
	            this.state = 131;
	            localctx.v = this.t_map_value();
	            break;

	        case 3:
	            localctx = new TMPParenContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 133;
	            this.match(scillaParser.LPAREN);
	            this.state = 134;
	            localctx.t = this.t_map_value_allow_targs();
	            this.state = 135;
	            this.match(scillaParser.RPAREN);
	            break;

	        case 4:
	            localctx = new TMPAddrContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 137;
	            localctx.vt = this.address_typ();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	t_map_value_allow_targs() {
	    let localctx = new T_map_value_allow_targsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, scillaParser.RULE_t_map_value_allow_targs);
	    var _la = 0; // Token type
	    try {
	        this.state = 147;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new TMP1Context(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 140;
	            localctx.d = this.scid();
	            this.state = 142; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 141;
	                localctx._t_map_value_args = this.t_map_value_args();
	                localctx.t_args.push(localctx._t_map_value_args);
	                this.state = 144; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===scillaParser.MAP || ((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (scillaParser.LPAREN - 37)) | (1 << (scillaParser.HEX - 37)) | (1 << (scillaParser.BYSTR - 37)) | (1 << (scillaParser.CID - 37)))) !== 0));
	            break;

	        case 2:
	            localctx = new TMP2Context(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 146;
	            this.t_map_value();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	address_typ() {
	    let localctx = new Address_typContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, scillaParser.RULE_address_typ);
	    var _la = 0; // Token type
	    try {
	        this.state = 181;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new AnyAdressContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 149;
	            localctx.d = this.cid();
	            this.state = 150;
	            this.match(scillaParser.WITH);
	            this.state = 151;
	            this.match(scillaParser.END);
	            break;

	        case 2:
	            localctx = new ContrAddrContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 153;
	            localctx.d = this.cid();
	            this.state = 154;
	            this.match(scillaParser.WITH);
	            this.state = 155;
	            this.match(scillaParser.CONTRACT);
	            this.state = 166;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===scillaParser.FIELD) {
	                this.state = 156;
	                localctx._address_type_field = this.address_type_field();
	                localctx.fs.push(localctx._address_type_field);
	                this.state = 161;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===scillaParser.COMMA) {
	                    this.state = 157;
	                    this.match(scillaParser.COMMA);
	                    this.state = 158;
	                    localctx._address_type_field = this.address_type_field();
	                    localctx.fs.push(localctx._address_type_field);
	                    this.state = 163;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	                this.state = 168;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 169;
	            this.match(scillaParser.END);
	            break;

	        case 3:
	            localctx = new LibAddrContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 171;
	            localctx.d = this.cid();
	            this.state = 172;
	            this.match(scillaParser.WITH);
	            this.state = 173;
	            this.match(scillaParser.LIBRARY);
	            this.state = 174;
	            this.match(scillaParser.END);
	            break;

	        case 4:
	            localctx = new CodeAddrContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 176;
	            localctx.d = this.cid();
	            this.state = 177;
	            this.match(scillaParser.WITH);
	            this.state = 178;
	            localctx.c = this.match(scillaParser.SPID);
	            this.state = 179;
	            this.match(scillaParser.END);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	typ(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new TypContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 12;
	    this.enterRecursionRule(localctx, 12, scillaParser.RULE_typ, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 205;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new PrimorADTTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 184;
	            localctx.d = this.scid();
	            this.state = 188;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 185;
	                    localctx._targ = this.targ();
	                    localctx.targs.push(localctx._targ); 
	                }
	                this.state = 190;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	            }

	            break;

	        case 2:
	            localctx = new MapTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 191;
	            this.match(scillaParser.MAP);
	            this.state = 192;
	            localctx.k = this.t_map_key();
	            this.state = 193;
	            localctx.v = this.t_map_value();
	            break;

	        case 3:
	            localctx = new ParenTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 195;
	            this.match(scillaParser.LPAREN);
	            this.state = 196;
	            localctx.t = this.typ(0);
	            this.state = 197;
	            this.match(scillaParser.RPAREN);
	            break;

	        case 4:
	            localctx = new AddrTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 199;
	            localctx.t_to_map = this.address_typ();
	            break;

	        case 5:
	            localctx = new PolyFunTyContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 200;
	            this.match(scillaParser.FORALL);
	            this.state = 201;
	            localctx.tv = this.match(scillaParser.TID);
	            this.state = 202;
	            this.match(scillaParser.PERIOD);
	            this.state = 203;
	            localctx.t = this.typ(2);
	            break;

	        case 6:
	            localctx = new TypeVarTypeContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 204;
	            localctx.t_var = this.match(scillaParser.TID);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 212;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,11,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new FunTypeContext(this, new TypContext(this, _parentctx, _parentState));
	                localctx.t1 = _prevctx;
	                this.pushNewRecursionContext(localctx, _startState, scillaParser.RULE_typ);
	                this.state = 207;
	                if (!( this.precpred(this._ctx, 5))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                }
	                this.state = 208;
	                this.match(scillaParser.TARROW);
	                this.state = 209;
	                localctx.t2 = this.typ(6); 
	            }
	            this.state = 214;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,11,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	targ() {
	    let localctx = new TargContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, scillaParser.RULE_targ);
	    try {
	        this.state = 226;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new TypTargContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 215;
	            this.match(scillaParser.LPAREN);
	            this.state = 216;
	            localctx.t = this.typ(0);
	            this.state = 217;
	            this.match(scillaParser.RPAREN);
	            break;

	        case 2:
	            localctx = new ScidTargContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 219;
	            localctx.d = this.scid();
	            break;

	        case 3:
	            localctx = new TvarTargContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 220;
	            localctx.t_var = this.match(scillaParser.TID);
	            break;

	        case 4:
	            localctx = new AddrTargContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 221;
	            localctx.t_to_map = this.address_typ();
	            break;

	        case 5:
	            localctx = new MapTargContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 222;
	            this.match(scillaParser.MAP);
	            this.state = 223;
	            localctx.k = this.t_map_key();
	            this.state = 224;
	            localctx.v = this.t_map_value();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	address_type_field() {
	    let localctx = new Address_type_fieldContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, scillaParser.RULE_address_type_field);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 228;
	        this.match(scillaParser.FIELD);
	        this.state = 229;
	        localctx.id = this.identifier();
	        this.state = 230;
	        this.match(scillaParser.COLON);
	        this.state = 231;
	        localctx.ty = this.typ(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exp() {
	    let localctx = new ExpContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, scillaParser.RULE_exp);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 233;
	        localctx.f = this.simple_exp();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	simple_exp() {
	    let localctx = new Simple_expContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, scillaParser.RULE_simple_exp);
	    var _la = 0; // Token type
	    try {
	        this.state = 312;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,21,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new LetContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 235;
	            this.match(scillaParser.LET);
	            this.state = 236;
	            localctx.x = this.identifier();
	            this.state = 239;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===scillaParser.COLON) {
	                this.state = 237;
	                this.match(scillaParser.COLON);
	                this.state = 238;
	                localctx.ty = this.typ(0);
	            }

	            this.state = 241;
	            this.match(scillaParser.EQ);
	            this.state = 242;
	            localctx.f = this.simple_exp();
	            this.state = 243;
	            this.match(scillaParser.IN);
	            this.state = 244;
	            localctx.e = this.exp();
	            break;

	        case 2:
	            localctx = new FunContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 246;
	            this.match(scillaParser.FUN);
	            this.state = 247;
	            this.match(scillaParser.LPAREN);
	            this.state = 248;
	            localctx.id = this.identifier();
	            this.state = 249;
	            this.match(scillaParser.COLON);
	            this.state = 250;
	            localctx.ty = this.typ(0);
	            this.state = 251;
	            this.match(scillaParser.RPAREN);
	            this.state = 252;
	            this.match(scillaParser.ARROW);
	            this.state = 253;
	            localctx.e = this.exp();
	            break;

	        case 3:
	            localctx = new AppContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 255;
	            localctx.f_var = this.sid();
	            this.state = 257; 
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 256;
	            		localctx._sid = this.sid();
	            		localctx.args.push(localctx._sid);
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 259; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,14, this._ctx);
	            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            break;
